Some cleanup to the nbdev and widgets notebook before cleanup of layout notebook.

--- a/02a_nbdev.ipynb
+++ b/02a_nbdev.ipynb
@@ -65,11 +65,9 @@
     "\n",
     "The first thing we need to do is tell nbdev what file we intend to export selected cells to.\n",
     "\n",
-    "The `default_exp` directive is required of all notebooks used by nbdev. Notice that nbdev directives all start with \"#|\". This requires that we add a default export directive to our notebook. It tells nbdev what file to export to.\n",
+    "We are intending to create a Python package called `dashboard` that will contain all the files we need for our dashboard. By convention, it will be created in a directory called `dashboard`.  We define that directory when we actually export the cells near the end of the notebook.  To define the individual file (often called module) within this package, we use the `#| default_exp` directive.  Notice that nbdev directives all start with \"#|\".\n",
     "\n",
-    "We are intending to create a Python package called `dashboard` that will contain all the files we need for our dashboard. By convention, it will be created in a directory called `dashboard`.  We define that directory below, but here we define the files within that directory.\n",
-    "\n",
-    "We are going to create a few line and cell magics that we will use through the tutorial. We want these magic functions to be accessible anywhere. Therefore, if we want them to go in `__init__.py` the default export for this notebook needs to be `__init__`."
+    "We are going to create a few line and cell magics that we will use through the tutorial. We want these magic functions to be accessible anywhere. Therefore, if we want them to go in `__init__.py` the export target for this notebook needs to be `__init__`."
    ]
   },
   {
@@ -88,7 +86,9 @@
    "id": "a994ec99",
    "metadata": {},
    "source": [
-    " You can also give it a “dotted module names” as is done with Python packages. For example, a default export to `some.module` will create a file called `some/module.py` within the package directory."
+    "> **IMPORTANT:** Two additional hints about using nbdev to create a Python module:\n",
+    "> 1.  You can also give it a “dotted module names” as is done with Python packages. For example, a `#| default_exp` directive with an output file of `some.module` will create a file called `some/module.py` within the package directory.\n",
+    "> 2.  Each Jupyter notebook can only be exported to a SINGLE Python module. If you want to export cells to multiple modules, you will need to create multiple notebooks."
    ]
   },
   {
@@ -326,7 +326,7 @@
     "\n",
     "Finally, we can use the `nb_export()` function to export the cells we selected into a Python file. The second parameter tells nbdev which package to export the module to. Let's go ahead and export this notebook to the `dashboard` package.\n",
     "\n",
-    "Note that the `nb_export()` function reads the notebook from disk before creating the package directory, so you will need to save your notebook before running the export!\n",
+    "Note that the `nb_export()` function reads the notebook from disk before creating the module (and package directory if necessary), so you will need to save your notebook before running the export!\n",
     "\n",
     "> **IMPORTANT**: Do not forget to save before exporting the notebook, or your most recent changes will not make it into `__init__.py` file in the `dashboard` directory. It is also a good habit to \"Restart Kernel and Clear All Outputs\" and then save your notebook at the same time as you export. That way, when you get around to committing your code, your `git diff` isn't filled up with a bunch of serial numbers and other unintelligible things."
    ]
