--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -5,11 +5,10 @@
    "id": "f961b01b-e8c5-4ecf-909b-982fe2a494d9",
    "metadata": {},
    "source": [
-    "# Reviewing Jupyter Widgets: Building a Data Dashboard\n",
+    "# Reviewing Jupyter Widgets: Building Widgets for our Data Dashboard\n",
     "\n",
     "## TODO LIST\n",
-    "- [ ] Once main has been rebuilt, uncomment the code to display it.\n",
-    "- [ ] Get to the point where a first version of the dashboard package is created, but note the complexity in the handling of all the settings since we require observer functions to handle all the individual settings (since they are separate widgets).  Do we mention the need to code up validation of the settings (e.g. - We need to ensure the degree of the fit was reasonable given the number of data points, etc.)?\n"
+    "- [ ] Once `main` module has been rebuilt with new widgets, uncomment the code to display it."
    ]
   },
   {
@@ -30,7 +29,7 @@
    "source": [
     "### Goal of this Notebook\n",
     "\n",
-    "In this notebook we will be developing a `widgets.py` mofile which will allow use to modify our [previous data workflow](./01b_workflow.ipynb) into a data dashboard. To achieve this, we will modify our data workflow to include Jupyter widgets that allow us to interact with the data.  This b\n",
+    "In this notebook we will be developing a `widgets.py` mofile which will allow use to build widgets for our data dashboard that build GUI controls for our [previous data workflow](./01b_workflow.ipynb). \n",
     "We will learn how to...\n",
     "\n",
     "### Steps You Will Take In This Notebook\n",
@@ -46,7 +45,7 @@
     "    - Create a slider widget to select the window size (aka the number of adjacent data points) to use for the smoothed/filtered data.\n",
     "    - Create an integer input widget to select the degree of the polynomial fit for the smoothed/filtered data.\n",
     "    - Update the smoothed/filtered data in the pandas dataframe.\n",
-    "6. Visualize data with a plot in an output widget.  This plot should update every time the widgets are used."
+    "6. Use output widgets to display both the raw data and a plot.  Both should be updated when year range or smoothing/filtering parameters are changed."
    ]
   },
   {
