Cleaned up plot labels a bit and added additional documentation of where the data came from.

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -1125,8 +1125,8 @@
     "\n",
     "```python\n",
     "plt.xlabel('Year')\n",
-    "plt.ylabel('Temperature')\n",
-    "plt.title('Global Ocean Temperature versus Time')\n",
+    "plt.ylabel('Temperature Anomalies over Land w.r.t. 1951-80 (˚C)')\n",
+    "plt.title('Global Annual Mean Surface Air Temperature Change')\n",
     "plt.plot(subset_df['Year'], subset_df['Temperature'], label='Raw Data')\n",
     "plt.plot(subset_df['Year'], subset_df[SG_col], label='Smoothed Data')\n",
     "plt.legend()\n",
@@ -1146,8 +1146,8 @@
     "# %answer key/02b/02.py\n",
     "\n",
     "plt.xlabel('Year')\n",
-    "plt.ylabel('Temperature')\n",
-    "plt.title('Global Temperature versus Time')\n",
+    "plt.ylabel('Temperature Anomalies over Land w.r.t. 1951-80 (˚C)')\n",
+    "plt.title('Global Annual Mean Surface Air Temperature Change')\n",
     "# plt.plot(subset_df['Year'], subset_df['Temperature'], label='Raw Data')\n",
     "# plt.plot(subset_df['Year'], subset_df[SG_col], label='Smoothed Data')\n",
     "plt.legend()\n",
