--- a/01b_workflow.ipynb
+++ b/01b_workflow.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "## Load data from file\n",
     "\n",
-    "We have a data file contains the global land-ocean temperature data from 1880 to 2023 that we would ultimately like to visualize using a web app. We will start by loading the data for this tutorial from the CSV file into a `pandas` DataFrame."
+    "We have a CSV data file containing Global Annual Mean Surface Air Temperature Change data from 1880 to 2023 [downloaded from NASA](https://data.giss.nasa.gov/gistemp/graphs/).  This is the data that we would ultimately like to visualize using a web app. We will start by loading the data for this tutorial from the CSV file into a `pandas` DataFrame."
    ]
   },
   {
@@ -94,8 +94,8 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "plt.xlabel('Year')\n",
-    "plt.ylabel('Temperature')\n",
-    "plt.title('Global Temperature versus Time')\n",
+    "plt.ylabel('Temperature Anomalies over Land w.r.t. 1951-80 (˚C)')\n",
+    "plt.title('Global Annual Mean Surface Air Temperature Change')\n",
     "plt.plot(df['Year'], df['Temperature'], label='Raw Data')\n",
     "plt.show()"
    ]
@@ -141,8 +141,8 @@
    "outputs": [],
    "source": [
     "plt.xlabel('Year')\n",
-    "plt.ylabel('Temperature')\n",
-    "plt.title('Global Temperature versus Time')\n",
+    "plt.ylabel('Temperature Anomalies over Land w.r.t. 1951-80 (˚C)')\n",
+    "plt.title('Global Annual Mean Surface Air Temperature Change')\n",
     "plt.plot(df['Year'], df['Temperature'], label='Raw Data')\n",
     "plt.plot(df['Year'], df[SG_col], label='Savitzky-Golay Filtered')\n",
     "plt.plot(df['Year'], df[moving_avg_col], label='Moving Average Filtered')\n",
@@ -182,8 +182,8 @@
    "outputs": [],
    "source": [
     "plt.xlabel('Year')\n",
-    "plt.ylabel('Temperature')\n",
-    "plt.title('Global Ocean Temperature versus Time')\n",
+    "plt.ylabel('Temperature Anomalies over Land w.r.t. 1951-80 (˚C)')\n",
+    "plt.title('Global Annual Mean Surface Air Temperature Change')\n",
     "plt.plot(subset_df['Year'], subset_df['Temperature'], label='Raw Data')\n",
     "plt.plot(subset_df['Year'], subset_df[SG_col], label='Savitzky-Golay Filtered')\n",
     "plt.plot(subset_df['Year'], subset_df[moving_avg_col], label='Moving Average Filtered')\n",
