--- a/02d_dashboard_test.ipynb
+++ b/02d_dashboard_test.ipynb
@@ -1,63 +1,40 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48c0a6fd-def1-4a9b-8611-b60cfdd46481",
+   "cell_type": "markdown",
+   "id": "4bcd1563-e526-4f42-b229-3ba38af4c6ee",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from dashboard.widgets import year_range, selected_data_output, window_size, poly_order, plot_output"
+    "# Testing our Dashboard Module\n",
+    "\n",
+    "### Goal of this Notebook\n",
+    "\n",
+    "In this notebook, we will test the dashboard module that we have created in the previous notebooks. It should be possible to simply import the `main_widget` function from the `main` module of the `dashboard` package and run it to get the dashboard up and running.\n",
+    "\n",
+    "### Steps You Will Take In This Notebook\n",
+    "In this notebook you will:\n",
+    "1. Import our `main_widget` function `from dashboard.main import main_widget`\n",
+    "2. Test it!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b205c260",
+   "metadata": {},
+   "source": [
+    "In addition to just seeing that the layout is working, we will also test the functionality of the dashboard. For example, make sure you can't create a smoothing function with a polynomial order larger than the window size."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1794443a-4f05-4f42-8f6b-3d5c25f44daf",
+   "id": "8abc327f-ee19-4bbe-8d55-954bd4ad3c5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "year_range"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "396635f0-8b12-4162-b026-bc3455cd5789",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_data_output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61b0b61c-f3e2-4411-a0fd-1ab869e7966c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "window_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70ad9a20-d55d-45b5-ad43-6c3bcd3f5754",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "poly_order"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c4ac9e6-4edf-4c9c-aaee-5a50213b486b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_output"
+    "from dashboard.main import main_widget # import the main widget\n",
+    "\n",
+    "main_widget # display the main widget"
    ]
   }
  ],
@@ -66,6 +43,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
