Fixed all the answer references and added a screenshot of the dashboard.

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -5,10 +5,7 @@
    "id": "f961b01b-e8c5-4ecf-909b-982fe2a494d9",
    "metadata": {},
    "source": [
-    "# Reviewing Jupyter Widgets: Building Widgets for our Data Dashboard\n",
-    "\n",
-    "## TODO LIST\n",
-    "- [ ] Once `main` module has been rebuilt with new widgets, uncomment the code to display it."
+    "# Reviewing Jupyter Widgets: Building Widgets for our Data Dashboard"
    ]
   },
   {
@@ -73,19 +70,11 @@
    "id": "41ed38cf-fc0b-4ef5-8c9b-2619f4ab3058",
    "metadata": {},
    "source": [
-    "## Preview the Final Product"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8a59617-f05b-48fc-afcd-79f534a02e96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from key.dashboard.main import main_widget\n",
+    "## Preview the Final Product\n",
     "\n",
-    "# main_widget"
+    "We will be converting our previous data workflow into a fully interactive web-based dashboard using Jupyter widgets.  The final product will look something like this:\n",
+    "\n",
+    "![Preview Image of Data Dashboard](key/dashboard_screenshot.png)"
    ]
   },
   {
