--- a/02c_layout.ipynb
+++ b/02c_layout.ipynb
@@ -5,10 +5,7 @@
    "id": "775f9b1e-8921-4517-8feb-5fcb5e69d57a",
    "metadata": {},
    "source": [
-    "# Reviewing Jupyter Widgets: Layout of our Data Dashboard\n",
-    "\n",
-    "## TODO LIST\n",
-    "- [ ] Get to the point where a first version of the dashboard package is created, but note the complexity in the handling of all the settings since we require observer functions to handle all the individual settings (since they are separate widgets).  Do we mention the need to code up validation of the settings (e.g. - We need to ensure the degree of the fit was reasonable given the number of data points, etc.)?\n"
+    "# Reviewing Jupyter Widgets: Layout of our Data Dashboard\n"
    ]
   },
   {
@@ -65,7 +62,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 6\n",
+    "# %answer key/dashboard/main.py 5\n",
     "\n",
     "import ipywidgets as widgets\n",
     "from dashboard.widgets import (year_range, window_size, poly_order, selected_data_grid,\n",
@@ -313,7 +310,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 28\n",
+    "# %answer key/dashboard/main.py 27\n",
     "\n",
     "selected_data_accordion.children = (selected_data_grid,)"
    ]
@@ -352,7 +349,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 32\n",
+    "# %answer key/dashboard/main.py 31\n",
     "\n",
     "selected_data_accordion.selected_index = 0"
    ]
@@ -594,7 +591,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 51\n",
+    "# %answer key/dashboard/main.py 52\n",
     "\n",
     "# how might we add padding to each of the widgets\n",
     "for child in desc_and_ctrl_box.children: # how might we add padding to each of the widgets\n",
@@ -617,7 +614,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/main.py 51\n",
+    "# %answer key/dashboard/main.py 54\n",
     "\n",
     "# Add a vertical box holding both table and plot visualizations of selected data\n",
     "data_box = widgets.VBox(children = (selected_data_accordion, plot_view)) # add the selected_data_accordion and the plot_output to a VBox widget called data_box"
@@ -689,7 +686,10 @@
    "id": "dcd61361-b84d-4665-88d0-c0e42c3e8dc0",
    "metadata": {},
    "source": [
-    "Wow, that looks pretty good! I think it's time to export the `main` module for our dashboard. Remember that our `main_widget` contains all the children widgets, so we should be able to simply import `main` in another notebook to see the final product."
+    "Wow, that looks pretty good!  There are several other ways to approach layout of widgets in Jupyter widgets, but this is a good start.  You can find more information in the [Jupyter Layout documentation](https://ipywidgets.readthedocs.io/en/stable/examples/Layout%20Templates.html).\n",
+    "\n",
+    "\n",
+    "It's time to export the `main` module for our dashboard. Remember that our `main_widget` contains all the children widgets, so we should be able to simply import `main` in another notebook to see the final product."
    ]
   },
   {
@@ -703,6 +703,27 @@
     "\n",
     "nb_export('02c_layout.ipynb', 'dashboard')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06a05c5b",
+   "metadata": {},
+   "source": [
+    "# Challenges with this Approach\n",
+    "\n",
+    "Notice that even for a relatively simple dashboard, we had to spend quite a bit of time writing:\n",
+    "- multiple handler functions for the widgets since multiple controls were used,\n",
+    "- the handler functions needed to handle the validation of inputs,\n",
+    "- custom layout of widgets was necessary to have all the controls appear together.\n",
+    "\n",
+    "As a web app's controls and logic get more complex, the complexity of the code to handle the controls and layout can grow burdensome.  This is why we will be exploring a more advanced approach in the next section of this tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e1dfb2f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
