--- a/04a_deployment_serverside.ipynb
+++ b/04a_deployment_serverside.ipynb
@@ -5,19 +5,17 @@
    "id": "06a0236b-3c68-4156-a4ab-d44f241284c5",
    "metadata": {},
    "source": [
-    "# Deploying Your Dashboard\n",
+    "# Deploying Your Dashboard: Service-Side Processing Options\n",
     "\n",
     "\n",
     "## TO DO IN THIS NOTEBOOK\n",
     "- [ ] Note the problem of Jupyter being server-client architecture and how it affects deployment as web app.\n",
-    "- [ ] Remove Binder section or move to front and mention issues with its speed (or lack thereof) and code visibility.\n",
+    "- [ ] Revise Binder section  and mention issues with its speed (or lack thereof) and code visibility.\n",
+    "- [ ] Mention deployment on Nebari (?)\n",
     "- [ ] Introduce Voila as a solution to the problem.\n",
     "  - [ ] Mention SECURITY issue that requires v0.5.6 or later to avoid.\n",
     "  - [ ] Mention setting up cronjob to restart Voila (and kill old processes) to avoid memory leak.\n",
-    "  - [ ] Mention need for robust server to handle multiple users.\n",
-    "- [ ] Discuss Voici as a Jupyter lite based alternative to Voila (although there are restrictions to its use tied to Jupyter lite)\n",
-    "- [ ] Discuss deployment to Github Pages as a static site.\n",
-    "- [ ] Discuss deployment to Sphinx (not sure this is actually possible)"
+    "  - [ ] Mention need for robust server to handle multiple users."
    ]
   },
   {
@@ -69,7 +67,19 @@
    "source": [
     "%%bash\n",
     "\n",
-    "voila 06_dashboard.ipynb"
+    "voila 02d_dashboard.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75185e06",
+   "metadata": {},
+   "source": [
+    "## Running Voila on a publicly accessible server\n",
+    "\n",
+    "This can be done and the instructions are available in the Voila documentation. If you have experience running linux servers, it isn't particularly hard to set up Voila to be running on a server and to respond to web queries.  That said, you do want to make sure you have a robust server to handle multiple users.  You also want to make sure you have a cronjob set up to restart Voila every so often to avoid memory leaks.\n",
+    "\n",
+    "Finally, running a publicly accessible server brings up security issues you want to be certain the security set up correctly (or that you deploy it on a relatively isolated system). Voila itself had some security issues that were fixed in version 0.5.6. "
    ]
   },
   {
