Fixed name of dashboard test notebook in Voila notes.

--- a/04a_deployment_serverside.ipynb
+++ b/04a_deployment_serverside.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "voila 02d_dashboard.ipynb"
+    "voila 02d_dashboard_test.ipynb"
    ]
   },
   {
