Revise pydantic notebook

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -20,8 +20,8 @@
     "- [x] Show how to define a Pydantic model and use it to \n",
     "  - [x] validate data using a Pydantic model\n",
     "  - [x] express constraints of smoothing window/order in pydantic\n",
-    "- [ ] Mention other features of Pydantic that may be relevant to our dashboard\n",
-    "- [ ] Have them migrate the existing data validation in the dashboard project to pydantic (might require a lot of refactoring of the code)"
+    "- [x] Mention other features of Pydantic that may be relevant to our dashboard\n",
+    "- [x] Have them migrate the existing data validation in the dashboard project to pydantic (might require a lot of refactoring of the code)"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "source": [
     "### Adding a method to the class\n",
     "\n",
-    "A *method* is a function that is part of a class. There are a couple of variations on methods for classes, but for now we will stick to the most common kind, sometimes called an *instance method*. \n",
+    "A *method* is a function that is part of a class. There are a couple of variations on methods for classes, but for now we will stick to the most common kind, called an *instance method*. \n",
     "\n",
     "One special thing about methods: the first argument will be the instance of the class that is *bound* to the instance. That argument is almost universally called `self` in Python."
    ]
@@ -153,7 +153,7 @@
    "source": [
     "### Subclasses\n",
     "\n",
-    "Every class in Python is actually derived from another class, except for one class called `object`. A subclass has all of the attributes and methods of its parent. \n",
+    "Every class in Python is actually derived from another class, except for one class called `object`. A subclass has all of the attributes and methods of its parent.\n",
     "\n",
     "As an example of subclassing, we define a class below that builds on `Basic` by asking the user a question after greeting them."
    ]
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HowYaDoing is the subclass, and Basic is its parent\n",
+    "# HowYaDoing is the subclass, and Basic is its parent, called a superclass\n",
     "class HowYaDoing(Basic):\n",
     "    \"\"\"\n",
     "    Ask the user how they are doing.\n",
@@ -212,7 +212,9 @@
     "\n",
     "Imagine we were going to extend this class by adding several more methods that each \"say\" something to the user, and that each of those will include the user's name. It would be convenient if the class just knew the name, something with can accomplish by adding an attribute to the class.\n",
     "\n",
-    "Here we will add a name attribute to the `Basic` class. We will do that in a special method called `__init__` that is called when an instance of the class is created."
+    "Here we will add a name attribute to the `Basic` class. We will do that in a special method called `__init__` that is called when an instance of the class is created.\n",
+    "\n",
+    "You may wonder whether `Basic` is a subclass of anything. The answer is yes -- if you do not give an explicit superclass then Python assumes it is `object`."
    ]
   },
   {
@@ -331,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Firs draft of class to represent our data selector"
+    "### First draft of class to represent our data selector"
    ]
   },
   {
@@ -344,7 +346,7 @@
     "\n",
     "This class has a method called `__init__` that is called when the class is created. It is one of many special methods (called \"magic\" methods) recognized by Python.\n",
     "\n",
-    "The `print` statement in the `__init__` is there to make it easier to see when it is called."
+    "The `print` statement in the `__init__` is there to make it easier to see when it is called. It will not be included in the final version of this class."
    ]
   },
   {
@@ -358,6 +360,19 @@
     "    Partial implementation of a class to hold a data selector widget.\n",
     "    \"\"\"\n",
     "    def __init__(self, year_range_input=(1800, 2000)):\n",
+    "        \"\"\"\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "\n",
+    "        year_range_input: tuple[int, int]\n",
+    "            A tuple of two integers that is the range of years present in the data.\n",
+    "\n",
+    "        Attributes\n",
+    "        ----------\n",
+    "\n",
+    "        year_range: tuple[int, int]\n",
+    "            The range of the data.\n",
+    "        \"\"\"\n",
     "        self.year_range = year_range_input\n",
     "        print(f\"In __init__, {year_range_input=} and {self.year_range=}\")"
    ]
@@ -434,7 +449,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: write answer "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -914,7 +931,7 @@
     "\n",
     "*Attributes in a pydantic model are typically called fields, terminology we will use for the remainder of the notebook.*\n",
     "\n",
-    "We have made some progress but we still have not imposed the constraints we want on window size and polynomial order. There are a couple new concepts we need to do that:\n",
+    "We have made some progress but we still have not imposed the constraints we want on window size and polynomial order. There are a couple new things we need to do that:\n",
     "\n",
     "+ `Annotated` from Python's typing system lets you add additional information about the type of an item. Here we will use it to add information about the constraint on a field.\n",
     "+ The `Field` class from pydantic is a class you use that contains that extra information. There are a number of possible arguments to `Field`. Here we use `ge`, short for \"greater than or equal to,\" to impose the constraint that the `window_size` be larger greater than or equal to 2. The `Field` class from `pydantic` is somewhat similar to the [`field` class from Python's data classes](https://docs.python.org/3/library/dataclasses.html#dataclasses.field) which also serves the purpose of adding information about a typed field.\n",
@@ -1118,15 +1135,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.model_json_schema()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1257,7 +1265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Use nbdev to export the code we want to reuse from this notebook "
+    "Use `nbdev` to export the code we want to reuse from this notebook "
    ]
   },
   {
@@ -1270,7 +1278,7 @@
     "\n",
     "from nbdev.export import nb_export\n",
     "\n",
-    "nb_export('03a_pydantic.ipynb', 'dashboard')"
+    "nb_export('03a_pydantic.ipynb', 'dashboard_pydantic')"
    ]
   },
   {
