--- a/03b_ipyautoui.ipynb
+++ b/03b_ipyautoui.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Introduction to ipyautoui\n",
     "\n",
@@ -12,19 +10,12 @@
     "\n",
     "\n",
     "## TO DO IN THIS NOTEBOOK\n",
-    "- [ ] Add a brief description of the package and its history?\n",
-    "- [ ] Show how to use ipyautoui to create a simple settings panel relatively quickly\n",
+    "- [x] Add a brief description of the package and its history?\n",
+    "- [x] Show how to use ipyautoui to create a simple settings panel relatively quickly\n",
     "  - [ ] Mention the active development of the package and the fact that it is still a bit buggy\n",
     "  - [ ] Mention other features of Pydantic that may be relevant to our dashboard\n",
     "- [ ] Have them replace existing settings widgets with control widget generated with ipyautoui\n",
     "- [ ] Connect new control widget to dashboard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# APPARENTLY WE CANT EXPORT FROM TWO NOTEBOOKS"
    ]
   },
   {
@@ -40,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Making a widget with ipyautoui takes a couple of steps\n",
+    "## Making a widget with ipyautoui\n",
     "\n",
     "1. Define a pydantic model (or write a jason schema)\n",
     "2. Feed the model to AutoUi\n",
@@ -112,7 +103,7 @@
    "source": [
     "### Attributes and methods of an AutoUi generated widget\n",
     "\n",
-    "A couple of attributes of the auto-generated widget are useful to know about. \n",
+    "A couple of attributes of the auto-generated widget are particularly useful to know about. \n",
     "\n",
     "1. `di_widgets` -- dictionary of widgets, one widget for each pydantic field.\n",
     "2. `value` -- dictionary of values, one key and value for each pydantic field.\n",
@@ -133,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, `AutoUi` is representing the `int` in our model with an `IntText` widget."
+    "In this case, `AutoUi` is representing the `int` in our model with an `IntText` widget. That kind of widget only allows integer values to be typed in it."
    ]
   },
   {
@@ -181,16 +172,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This observer function just prints to the screen\n",
     "def print_value(change):\n",
-    "    print(f\"{change['new']=}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(f\"{change['new']=}\")\n",
+    "    \n",
     "# NOTE that we are observing changes in _value rather than value\n",
     "ui.observe(print_value, \"_value\")"
    ]
@@ -235,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add constraints to window size, one constraint at a time, to see how they affect the widget that is generated."
+    "Next, let's add Add constraints to window size, one constraint at a time, to see how they affect the widget that is generated."
    ]
   },
   {
@@ -308,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nice, now the user cannot set the value below 2!"
+    "Nice, now the user cannot set the value below 2! As you can see below, that is because the `min` attribute of the `BoundedIntText` is set to 2."
    ]
   },
   {
@@ -318,6 +303,13 @@
    "outputs": [],
    "source": [
     "ui3.di_widgets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we add the constraint that the window size must be less than or equal to 100. We also use the `desription` argument to `Field` to add a brief description of the field to the user interface."
    ]
   },
   {
@@ -344,7 +336,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NEED MORE INTRO BEFORE WE DO THIS"
+    "Note that we have also let `ipyautoui` choose the widget -- with both an upper and lower limit provided it makes a slider."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SimpleModel4.model_json_schema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SimpleModel2.model_json_schema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The data selector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's import the pydantic model we finished up the last notebook with."
    ]
   },
   {
@@ -358,12 +382,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "controls = AutoUi(DataSelectorModelDraft6)"
+    "Next, we create a UI for the model."
    ]
   },
   {
@@ -372,7 +394,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "controls = AutoUi(DataSelectorModelDraft6)\n",
     "controls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That looks almost right, except that we want the year range selector to be a slider, not a....whatever that is."
    ]
   },
   {
@@ -386,19 +416,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise \n",
+    "\n",
+    "Add the necessary code to the class definition below to force the `year_range` to be represented with an `IntRangeSlider`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# TODO: write answer \n",
     "\n",
-    "class DataSelectorModel(BaseModel, validate_assignment=True):\n",
+    "class DataSelectorModelPenultimate(BaseModel, validate_assignment=True):\n",
     "    year_range: Annotated[\n",
     "        tuple[int, int],\n",
-    "        Field(json_schema_extra=dict(autoui='ipywidgets.IntRangeSlider'))\n",
+    "        Field(json_schema_extra=dict(autoui='ipywidgets.IntRangeSlider'))  # Fill in the correct arguments here\n",
     "    ] = (1800, 2000)\n",
-    "    window_size: Annotated[int, Field(ge=2, le=100, json_schema_extra=dict(autoui='ipywidgets.BoundedIntText'))] = 2\n",
+    "    window_size: Annotated[int, Field(ge=2, le=100)] = 2\n",
     "    polynomial_order: Annotated[int, Field(ge=1, le=10)] = 1\n",
     "\n",
     "    # mode=\"after\" means the validator runs after pydantic has checked that the individual\n",
@@ -421,35 +460,163 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataSelectorModel.model_json_schema()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui = AutoUi(DataSelectorModel)\n",
+    "ui = AutoUi(DataSelectorModelPenultimate)\n",
     "ui"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "ui.value"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Enforcing the constraint between polynomial order and window size\n",
+    "### Exercise\n",
+    "\n",
+    "Try setting the window size and polynomial order to an invalid combination and see what happens."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fixing the range of the slider\n",
+    "\n",
+    "You may have noticed that range of the `year_range` slider isn't correct. The minimum is 0 and the maximum is 100.\n",
+    "\n",
+    "There are a couple of ways we can fix this:\n",
+    " \n",
+    "1. Set those properties on the slider.\n",
+    "2. Modify the type hint we provide for `year_range`.\n",
+    "\n",
+    "Let's try both. For the sake of argument we will assume that the year range is 1880 to 2020."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Setting the widget properties\n",
+    "\n",
+    "Recall that the `di_widgets` attribute of an `AutoUi` control is a dictionary whose keys are our field names and whose values are the widget(s) representing that field.\n",
+    "\n",
+    "With that in mind, we can set the `min` and `max` properties of the auto-generated control like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.di_widgets[\"year_range\"].max = 2020\n",
+    "ui.di_widgets[\"year_range\"].min = 1880"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can set the value in a similar way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.di_widgets[\"year_range\"].value = (1880, 2020)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modifying the type hints"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An alternative approach to setting the `min` and `max` directly is to modify the pydantic model to reflect the fact that the two `int`s that make up the `year_range` have constraints on them: each of the integers must fall within the range of years provided.\n",
+    "\n",
+    "What we want to end up doing is expressing to pydantic that each `int` has a restricted range. We'll do that by defining our own type below and then using that custom type in our Ppydantic model.\n",
+    "\n",
+    "We use feature of type hinting introduced in Python 3.12 called type aliasing to do this. The feature looks very different in Python 3.12 than it does in ealier versions of Python.\n",
+    "\n",
+    "The cell below imports`TypeAliasType` from `typing-extensions`to let pydantic and type checkers know that we are defining a new type. `typing-extensions` is a package that backports new typing features in python to Python versions before the feature was added.\n",
+    "\n",
+    "The equivalent to the definition of `ConstrainedInt` below in Python 3.12 looks like this:\n",
+    "\n",
+    "```python\n",
+    "# Only works in Python 3.12 and up!\n",
+    "type ConstrainedInt = Annotated[int, Field(ge=1880, le=2020)]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing_extensions import TypeAliasType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ConstrainedInt = TypeAliasType(\"ConstrainedInt\", Annotated[int, Field(ge=1880, le=2020)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataSelectorModel(BaseModel, validate_assignment=True):\n",
+    "    year_range: Annotated[\n",
+    "        # The key change is in the line below\n",
+    "        tuple[ConstrainedInt, ConstrainedInt],\n",
+    "        # With this change to the type we no longer need to tell ipyautoui\n",
+    "        # what kind of widget to use. Field contains just a brief description\n",
+    "        Field(description=\"Range of years to plot\")\n",
+    "    ] = (1800, 2000)\n",
+    "    window_size: Annotated[int, Field(ge=2, le=100)] = 2\n",
+    "    polynomial_order: Annotated[int, Field(ge=1, le=10)] = 1\n",
+    "\n",
+    "    # mode=\"after\" means the validator runs after pydantic has checked that the individual\n",
+    "    # fields have values that are valid.\n",
+    "    @model_validator(mode=\"after\")\n",
+    "    def limit_polynomial_order(self):\n",
+    "        \n",
+    "        if self.polynomial_order > self.window_size - 1:\n",
+    "            # Handle a bad polynomial order or window size\n",
+    "            raise ValueError(\"Polynomial order must be smaller than window size\")\n",
+    "            \n",
+    "        # If we got this far the polynomial order is consistent with the window size\n",
+    "        # so return self. Failing to return self will end up causing an error.\n",
+    "        return self"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui_final = AutoUi(DataSelectorModel)\n",
+    "ui_final"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Enforcing the constraint between polynomial order and window size\n",
     "\n",
     "There are a few options here:\n",
     "\n",
@@ -480,28 +647,37 @@
    "source": [
     "Our approach is to observe the `_value` of the widget, try to make a valid model out of it, and if that fails set the widget to the old value. `ipyautoui` will take care of displaying an appropriate error message for us.\n",
     "\n",
-    "The observe below is created using a *closure*, which is a function is created inside of another function where the ineer function uses some of the variables form the outer function. Here we do that instead of treating `ui` as a global variable."
+    "The observe below is created using a [*closure*](https://en.wikipedia.org/wiki/Closure_(computer_programming)), which is a function that is created inside of another function where the inner function uses some of the variables form the outer function. Here we do that instead of treating `ui` as a global variable."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pydantic import ValidationError\n",
     "def make_enforcer(ui):\n",
+    "    \"\"\"\n",
+    "    Make a function that can be used to observe changes on a \n",
+    "    user interface element.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "\n",
+    "    ui: an AutoUi widget\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "\n",
+    "    callable\n",
+    "        A function that can be used as the observer of a traitlets event.\n",
+    "    \"\"\"\n",
     "    def constraint_enforcer(change):\n",
     "        \"\"\"\n",
     "        Reset widget to the most recent valid value if the new\n",
     "        value results in an invalid value.\n",
     "        \"\"\"\n",
-    "        print(change[\"new\"])\n",
-    "        print(change[\"old\"])\n",
     "        try:\n",
     "            # Every AutoUi widget has a copy of the model class\n",
     "            # We'll try validating the value in change[\"new\"] and see if it works\n",
@@ -519,7 +695,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.observe(make_enforcer(ui), \"_value\")"
+    "ui_final.observe(make_enforcer(ui_final), \"_value\")"
    ]
   },
   {
@@ -528,7 +704,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.di_widgets"
+    "ui_final"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Further exploration of ipyautoui\n",
+    "\n",
+    "The easiest way to get a better idea of what ipyautoui can do is to try out its demo. If you have time, feel free to explore!"
    ]
   },
   {
@@ -539,17 +724,6 @@
    "source": [
     "from ipyautoui import demo\n",
     "demo()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nbdev.export import nb_export\n",
-    "\n",
-    "nb_export('03b_ipyautoui.ipynb', 'dashboard')"
    ]
   },
   {
