Add just a bit to ipyautoui extension

--- a/03c_more_ipyautoui_pydantic.ipynb
+++ b/03c_more_ipyautoui_pydantic.ipynb
@@ -142,7 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui_data_smooth.display_bn_shownull = True"
+    "# Force nullable fields to be shown\n",
+    "ui_data_smooth.show_null = True"
    ]
   },
   {
@@ -152,23 +153,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Force nested models to open\n",
     "ui_data_smooth.open_nested = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b0e2d944-d337-4c2d-989f-0349e1d52190",
+   "execution_count": 12,
+   "id": "534b6039-7f16-4671-bfab-6521b87654ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ui_data_smooth.value"
+    "..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "534b6039-7f16-4671-bfab-6521b87654ac",
+   "id": "0c9e977f-13a3-4d90-bb6b-ef32e6916c11",
    "metadata": {},
    "outputs": [],
    "source": []
