--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -460,11 +460,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The second (optional) argument to the observe method is the name of the trait\n",
-    "# to watch for changes. The default is 'All' which watches all traits.\n",
-    "# This particular widget only has a value trait, so asking to observe the 'value'\n",
-    "# trait is redundant... however, it is good practice to be explicit.\n",
-    "year_range.observe(on_range_change, 'value')"
+    "# WARNING: The second argument to the observe method is the name of the trait\n",
+    "# to watch for changes. The default is 'All' which watches all traits, including tr
+    "# that start with an underscore that are intended only for internal use. \n",
+    "# Watching all traits can be problematic for the same reason as in the function abo
+    "# If too many changes occur at once, there is a chance your function will be called
+    "# on a change to one of these internal traits - such as '_property_lock' - and cause
+    "# your callback to fail or even silently cause unexpected behavior."
    ]
   },
   {
