Fixed unfixed reference to old data frame name.
Co-authored-by: Nicole Brewer <nbrewer6@asu.edu>

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -1029,7 +1029,7 @@
     "# %answer key/dashboard/widgets.py 89\n",
     "\n",
     "def on_window_size_change(change):\n",
-    "    global original_data, selected, poly_order\n",
+    "    global original_data, selected_df, poly_order\n",
     "    # change the maximum of the poly_order widget\n",
     "    # catch the change in the window_size widget value and update the original_df\n",
     "    original_df['Smoothed Data'] = savgol_filter(original_df['Temperature'],\n",
