Clarify comments about calling widget values being less than desirable.
Added Nicole's clarification of the dangers of calling values of widgets directly from a handler function.

Co-authored-by: Nicole Brewer <nbrewer6@asu.edu>

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -446,11 +446,12 @@
     "    global selected_df\n",
     "    selected_df = original_df[(original_df['Year'] >= change['new'][0])\n",
     "                              & (original_df['Year'] <= change['new'][1])]\n",
-    "    # NOTE: You could also use:\n",
-    "    #  selected_df = original_df[(original_df['Year'] >= year_range.value[0])\n",
-    "    #                             & (original_df['Year'] <= year_range.value[1])]\n",
-    "    # but it is better to use the 'change' object passed to the function because it is\n",
-    "    # not dependent on the name of the widget."
+"    # WARNING: You could have thought to use:\n",
+"    #  selected_df = original_df[(original_df['Year'] >= year_range.value[0])\n",
+"    #                             & (original_df['Year'] <= year_range.value[1])]\n",
+"    # but for many manual interactions, such as a click and drag slider, a high\n",
+"    # overturn of quickly changing widget values could silently cause\n",
+"    # unexpected behavior in changing values, so that syntax should be avoided"
    ]
   },
   {
