Cleanup of some of the widgets notebook in response to Nicole's comments about showing plot_view Output widget closer to where it is changed interactively.

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -91,22 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e5c6ecde-5850-4d35-903e-6ed258669fe6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Line magic function `%answer` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| export\n",
-    "\n",
-    "# %answer key/dashboard/widgets.py 8\n",
+    "# %answer key/dashboard/widgets.py 7\n",
     "\n",
     "import pandas as pd\n",
     "import os\n",
@@ -262,7 +253,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 21\n",
+    "# %answer key/dashboard/widgets.py 20\n",
     "\n",
     "# set the 'max' attribute of the slider to the minimum year of the our data\n",
     "# and let's do the same for 'min'"
@@ -331,9 +322,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 27\n",
+    "# %answer key/dashboard/widgets.py 26\n",
     "\n",
-    "# selected_df = original_df[(original_df['Year'] >= from_year) & (original_df['Year'] <= to_year)]"
+    "selected_df = original_df[(original_df['Year'] >= year_range.value[0]) & (original_df['Year'] <= year_range.value[1])] # selected_df = original_df[(original_df['Year'] >= from_year) & (original_df['Year'] <= to_year)]"
    ]
   },
   {
@@ -391,7 +382,7 @@
    "source": [
     "# Attach the above 'handler' function to the widget so that it gets called whenever a\n",
     "# trait of the widget changes.\n",
-    "year_range.observe(on_range_change)"
+    "year_range.observe(on_range_change)  # Warning: This is actually a poor practice, see below..."
    ]
   },
   {
@@ -428,7 +419,7 @@
    "metadata": {},
    "source": [
     "## Update `selected_df` dataframe with new range\n",
-    "Now that we know how to observe changes in the slider value, we want to use that observe function to update the `selected_df` dataframe. Let's rewrite the `on_range_change` function so that it updates the `selected_df` dataframe."
+    "Now that we know how to observe changes in the slider value, we want to use that `observe` method to update the `selected_df` dataframe. Let's rewrite the `on_range_change` function so that it updates the `selected_df` dataframe."
    ]
   },
   {
@@ -446,12 +437,24 @@
     "    global selected_df\n",
     "    selected_df = original_df[(original_df['Year'] >= change['new'][0])\n",
     "                              & (original_df['Year'] <= change['new'][1])]\n",
-"    # WARNING: You could have thought to use:\n",
-"    #  selected_df = original_df[(original_df['Year'] >= year_range.value[0])\n",
-"    #                             & (original_df['Year'] <= year_range.value[1])]\n",
-"    # but for many manual interactions, such as a click and drag slider, a high\n",
-"    # overturn of quickly changing widget values could silently cause\n",
-"    # unexpected behavior in changing values, so that syntax should be avoided"
+    "    # WARNING: You could have thought to use:\n",
+    "    #  selected_df = original_df[(original_df['Year'] >= year_range.value[0])\n",
+    "    #                             & (original_df['Year'] <= year_range.value[1])]\n",
+    "    # but for many manual interactions, such as a click and drag slider, a high\n",
+    "    # overturn of quickly changing widget values could silently cause\n",
+    "    # unexpected behavior in changing values, so that syntax should be avoided"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "355286a4",
+   "metadata": {},
+   "source": [
+    "And now let's test it by directing the `observe` method to call this new `on_range_change` every time the value of the slider changes. While we do this, let's address a poor Jupyter widget programming practice we showed earlier.  There is an optional second argument to the `observe` method which is the name of the trait to watch for changes.  We didn't include it... this is not a good choice.\n",
+    "\n",
+    "While the name of the trait to watch is technically optional, you really should always include it.  Why?  It has a default value of 'All' which watches all traits. This includes traits that start with an underscore (i.e. traits meant by the programmer to be private).  Furthermore, if too many changes occur at once, there is a chance your function will be called on a change to one of these internal traits - such as '_property_lock' - and cause your callback to fail or even silently cause unexpected behavior.\n",
+    "\n",
+    "So a good Jupyter widgets programmer should always specify the trait we are observing for changes, which is normally 'value'."
    ]
   },
   {
@@ -461,13 +464,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# WARNING: The second argument to the observe method is the name of the trait\n",
-    "# to watch for changes. The default is 'All' which watches all traits, including tr
-    "# that start with an underscore that are intended only for internal use. \n",
-    "# Watching all traits can be problematic for the same reason as in the function abo
-    "# If too many changes occur at once, there is a chance your function will be called
-    "# on a change to one of these internal traits - such as '_property_lock' - and cause
-    "# your callback to fail or even silently cause unexpected behavior."
+    "# Connect the new version of the handler function to the widget via observe\n",
+    "# method, this time providing the name of the trait to watch.\n",
+    "year_range.observe(on_range_change, 'value')"
    ]
   },
   {
@@ -567,6 +566,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adjust the range of years and confirm the selected dataframe changed\n",
     "year_range.value = (1900, 2000)\n",
     "\n",
     "selected_df"
@@ -637,7 +637,9 @@
    "id": "8a21b7a1-ad8e-41c3-9201-b2fe30103f15",
    "metadata": {},
    "source": [
-    "Voila! The `selected_dataframe_output` widget now displays the dataframe. Now we need to be able to update that display when someone changes the year range. Let's write a function for this."
+    "Voila! The `selected_dataframe_view` widget now displays the original dataframe (notice it contains years 1880 to 2023). \n",
+    "\n",
+    "Now we need to be able to update that display when someone changes the year range (i.e. displaying the `selected_df` dataframe which it changes in response to a `year_range` change). Let's write a handler function for this."
    ]
   },
   {
@@ -887,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "8b7c924b-7e99-488c-b85d-d531e23702be",
    "metadata": {},
    "outputs": [],
@@ -930,7 +932,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_data_grid\n"
+    "selected_data_grid"
    ]
   },
   {
@@ -948,7 +950,9 @@
    "id": "677f5e26-fe20-4be6-9f66-80954604049c",
    "metadata": {},
    "source": [
-    "Sweet! If you still have an Datagrid View of the `selected_df` dataframe open, and you increase the value of `window_size` you will see that there is now a Savitzky-Golay column. Now I want you to create a Slider widget that is linked to the `poly_order`. "
+    "Sweet! If you still have an Datagrid View of the `selected_df` dataframe open, and you increase the value of `window_size` you will see that there is now a \"Smoothed Data\"\" column. \n",
+    "\n",
+    "Now create a Slider widget that is linked to the `poly_order`. "
    ]
   },
   {
@@ -1153,7 +1157,7 @@
    "source": [
     "Okay that works, but the plot is showing up inline in our notebook. Once created, it can't be modified except by changing the data and re-executing the cell.  It sure would be nice if we could have the plot automatically update when the data year_range or smoothing parameters are changed.  How do we do that?\n",
     "\n",
-    "Yeah, we can use an Output widget again, just like we did with the dataframe.  Let's call it `plot_output`.  Then we can use the `display` function to display the plot in the `plot_output` widget.  Go ahead and replace the commented code in the cell below with the correct code to create the `plot_output` widget and run the cell afterward to see if it works."
+    "Yeah, we can use an Output widget again, just like we did with the dataframe.  Let's call it `plot_view`. "
    ]
   },
   {
@@ -1166,17 +1170,7 @@
     "#| export\n",
     "# %answer key/dashboard/widgets.py 99\n",
     "\n",
-    "# create an output widget called plot_output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d4734c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_view"
+    "# create an output widget called plot_view"
    ]
   },
   {
@@ -1184,23 +1178,15 @@
    "id": "53609542-9daf-473e-99c9-381eb9d5a864",
    "metadata": {},
    "source": [
-    "Go ahead and create an Output View for this widget also.\n",
-    "\n",
-    "Okay. Now let's remember what we did to update our Output widget display last time. \n",
+    "If we call the `plot_view` Output widget, it would currently be blank.  Let's fix this by creating a function that will update the `plot_view` Output widget display. Recall that to update a Output widget (it was `selected_dataframe_view`) we created a function that would update it by calling `display` with the content to show in that Output widget:\n",
     "```python\n",
     "def output_selected_dataframe(change):\n",
     "    selected_dataframe_view.clear_output(wait=True)\n",
     "    with selected_dataframe_view:\n",
     "        display(selected_df)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc519589-77f0-4956-a4c2-fb6602f31f15",
-   "metadata": {},
-   "source": [
-    "Go ahead and adapt this function so that instead of displaying the selected dataframe, it displays an updated plot."
+    "```\n",
+    "\n",
+    " Let's do that again, but this time for the plot. Go ahead and adapt this approach below so that instead of displaying the selected dataframe, it displays an updated plot."
    ]
   },
   {
@@ -1211,12 +1197,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/dashboard/widgets.py 103\n",
+    "# %answer key/dashboard/widgets.py 101\n",
     "\n",
     "def output_plot(change):\n",
     "    plot_view.clear_output(wait=True)\n",
-    "    with plot_view:\n",
-    "        # Create a plot"
+    "    # Add with content handler for `plot_view`"
    ]
   },
   {
@@ -1224,7 +1209,18 @@
    "id": "bed98f1f-0220-417e-ab19-992e567b49f8",
    "metadata": {},
    "source": [
-    "Let's make sure out new callback works when we call it explicitly."
+    "Let's make sure our new callback works when we call it explicitly. If we display `plot_view` again, we shouldn't see any output initially."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da7f6b7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display plot_view again\n",
+    "plot_view"
    ]
   },
   {
@@ -1234,6 +1230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Call the output_plot function to test output_plot function works.\n",
+    "# Use None as argument (since this function is expecting a change variable as argument).\n",
     "output_plot(None)"
    ]
   },
@@ -1325,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "id": "7e91e724-9497-4571-ab90-9b1652cbd868",
    "metadata": {},
    "outputs": [],
