Added a note after first slider displayed to note text may be cut off.

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -214,7 +214,9 @@
    "id": "ce69851a-0cc5-489c-967f-c46663e37350",
    "metadata": {},
    "source": [
-    "Okay great! But 0 - 100 isn't the range we want. Instead, we would like the minimum and maximum to be the earliest and latest years in our dataset. So we need to obtain those first. "
+    "**Display Note**: The slider widget may be displayed in a way that cuts off the descriptive text and the values. We will address how to fix this in the next notebook when we tweak the layout.\n",
+    "\n",
+    "Okay great! But 0 - 100 isn't the range we want. Instead, we would like the minimum and maximum to be the earliest and latest years in our dataset. So we need to obtain those first."
    ]
   },
   {
